--- a/FullStackTestAutomation/test-output/old/Default suite/methods-alphabetical.html
+++ b/FullStackTestAutomation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="646db9">  <td>19/04/25 10:32:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommonOps.afterClass()[pri:0, instance:tests.MortgageApp@10d59286]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1904324159</td>   <td></td> </tr>
-<tr bgcolor="646db9">  <td>19/04/25 10:32:00</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommonOps.afterMethod()[pri:0, instance:tests.MortgageApp@10d59286]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1904324159</td>   <td></td> </tr>
-<tr bgcolor="646db9">  <td>19/04/25 10:31:23</td>   <td>-37716</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CommonOps.beforeClass()[pri:0, instance:tests.MortgageApp@10d59286]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1904324159</td>   <td></td> </tr>
-<tr bgcolor="646db9">  <td>19/04/25 10:31:34</td>   <td>-26548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CommonOps.beforeMethod(java.lang.reflect.Method)[pri:0, instance:tests.MortgageApp@10d59286]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1904324159</td>   <td></td> </tr>
-<tr bgcolor="98d7a3">  <td>19/04/25 10:31:34</td>   <td>-26546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MortgageApp.test01_verifyRepayment()[pri:0, instance:tests.MortgageApp@10d59286]">test01_verifyRepayment</td> 
-  <td>main@1904324159</td>   <td></td> </tr>
+<tr bgcolor="646db9">  <td>19/04/25 12:17:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommonOps.afterClass()[pri:0, instance:tests.Students@281e3708]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@85445963</td>   <td></td> </tr>
+<tr bgcolor="646db9">  <td>19/04/25 12:17:40</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommonOps.afterMethod()[pri:0, instance:tests.Students@281e3708]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@85445963</td>   <td></td> </tr>
+<tr bgcolor="646db9">  <td>19/04/25 12:17:38</td>   <td>-1205</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CommonOps.beforeClass()[pri:0, instance:tests.Students@281e3708]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@85445963</td>   <td></td> </tr>
+<tr bgcolor="646db9">  <td>19/04/25 12:17:39</td>   <td>-796</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CommonOps.beforeMethod(java.lang.reflect.Method)[pri:0, instance:tests.Students@281e3708]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@85445963</td>   <td></td> </tr>
+<tr bgcolor="98d7a3">  <td>19/04/25 12:17:39</td>   <td>-794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Students.test01_VerifyStudentCreated()[pri:0, instance:tests.Students@281e3708]">test01_VerifyStudentCreated</td> 
+  <td>main@85445963</td>   <td></td> </tr>
 </table>
