--- a/FullStackTestAutomation/test-output/old/Default suite/classes.html
+++ b/FullStackTestAutomation/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.Students</td>
+<td>tests.Calculator</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test01_VerifyStudentCreated</td>
+<td>test01_Verify1Plus2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
